--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
       </div>
     </nav>
 
+    <section></section>
+
     <div class="container">
       <h1 class="text-center mt-5 mb-5">ISI KONTEN NYA</h1>
     </div>
