--- a/index.html
+++ b/index.html
@@ -23,52 +23,52 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container d-flex justify-content-between">
-        <a class="navbar-brand" href="#"
-          ><img
-            src="./assets/images/logo.png"
-            id="logo"
-            alt="Environthink Logo"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div
-          class="justify-content-end collapse navbar-collapse"
-          id="navbarNavDropdown"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Aksi</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Artikel</a>
-            </li>
-            <li class="nav-item mt-1 mb-2 ms-3 me-4">
-              <a class="" href="#"
-                ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
-              ></a>
-            </li>
-            <li class="nav-item">
-              <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
-                >Donasi</a
-              >
-            </li>
-          </ul>
-        </div>
+    <nav class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow">
+      <div class="container">
+          <a class="navbar-brand" href="#"
+              ><img
+              src="./assets/images/logo.png"
+              id="logo"
+              alt="Environthink Logo"
+          /></a>
+          <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNavDropdown"
+              aria-controls="navbarNavDropdown"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+          >
+              <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <div
+              class="justify-content-end collapse navbar-collapse"
+              id="navbarNavDropdown"
+          >
+              <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="#">Aksi</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="article.html">Artikel</a>
+              </li>
+              <li class="nav-item mt-1 mb-2 ms-3 me-4">
+                  <a class="" href="#"
+                  ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
+                  ></a>
+              </li>
+              <li class="nav-item">
+                  <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
+                  >Donasi</a
+                  >
+              </li>
+              </ul>
+          </div>
       </div>
     </nav>
 
