add article fetch api

--- a/article.html
+++ b/article.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow">
+<nav class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top" >
     <div class="container">
         <a class="navbar-brand" href="#"
             ><img
@@ -74,50 +74,11 @@
     </div>
 </nav>
 
-<div class="container p-5">
-    <div class="artikel" id="artikel">
+<div class="container p-5" >
+    <div class="artikel" id="artikel" >
         <h3 class="text-start mb-3">Artikel</h3>
         <div style="border: 0.5px solid #BFBFBF"></div>
-        <div id="artikelContent" class="row pt-4">
-            <div class="col-sm-4 mb-3 mb-sm-0">
-                <div class="card">
-                    <img src="https://www.greenpeace.org/static/planet4-indonesia-stateless/2023/03/289a6ae5-gp1sucvy_web_size_with_credit_line.jpg" class="card-img-top" alt="artikel">
-                    <div class="card-body">
-                        <h5 class="card-title">Transportasi Berkeadilan, Juru(s) Selamat Mobilitas Masyarakat Kita</h5>
-                        <p class="card-text" style="color: #595959; text-align: justify;">Transportasi umum adalah kebutuhan dasar  masyarakat dan diwujudkan oleh pemerintah dari hasil memungut pajak masyarakatnya. Pemerintah pun sadar akan hal ini dan dalam beberapa waktu belakangan mulai melirik isu transportasi publik. Namun sayangnya, banyak proyek pemerintah dalam hal transportasi publik yang dirasa masih tidak tepat sasaran.</p>
-                        <p class="fw-bold" style="color: #6F7376;">
-                            <span class="author">Ngobrol Lingkungan</span> <span class="dot">.</span>
-                            <span class="date">28 Maret 2023</span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card">
-                    <img src="https://www.greenpeace.org/static/planet4-indonesia-stateless/2023/03/289a6ae5-gp1sucvy_web_size_with_credit_line.jpg" class="card-img-top" alt="artikel">
-                    <div class="card-body">
-                        <h5 class="card-title">Transportasi Berkeadilan, Juru(s) Selamat Mobilitas Masyarakat Kita</h5>
-                        <p class="card-text" style="color: #595959; text-align: justify;">Transportasi umum adalah kebutuhan dasar  masyarakat dan diwujudkan oleh pemerintah dari hasil memungut pajak masyarakatnya. Pemerintah pun sadar akan hal ini dan dalam beberapa waktu belakangan mulai melirik isu transportasi publik. Namun sayangnya, banyak proyek pemerintah dalam hal transportasi publik yang dirasa masih tidak tepat sasaran.</p>
-                        <p class="fw-bold" style="color: #6F7376;">
-                            <span class="author">Ngobrol Lingkungan</span> <span class="dot">.</span>
-                            <span class="date">28 Maret 2023</span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card">
-                    <img src="https://www.greenpeace.org/static/planet4-indonesia-stateless/2023/03/289a6ae5-gp1sucvy_web_size_with_credit_line.jpg" class="card-img-top" alt="artikel">
-                    <div class="card-body">
-                        <h5 class="card-title">Transportasi Berkeadilan, Juru(s) Selamat Mobilitas Masyarakat Kita</h5>
-                        <p class="card-text" style="color: #595959; text-align: justify;">Transportasi umum adalah kebutuhan dasar  masyarakat dan diwujudkan oleh pemerintah dari hasil memungut pajak masyarakatnya. Pemerintah pun sadar akan hal ini dan dalam beberapa waktu belakangan mulai melirik isu transportasi publik. Namun sayangnya, banyak proyek pemerintah dalam hal transportasi publik yang dirasa masih tidak tepat sasaran.</p>
-                        <p class="fw-bold" style="color: #6F7376;">
-                            <span class="author">Ngobrol Lingkungan</span> <span class="dot">.</span>
-                            <span class="date">28 Maret 2023</span>
-                        </p>
-                    </div>
-                </div>
-            </div>
+        <div id="artikelContent" class="row pt-4" >
         </div>
     </div>
 </div>
@@ -152,7 +113,7 @@
                 </div>
             </div>
             <div class="col-sm-4">
-                <div class="card">
+                <div class="card card-infografis">
                     <img src="https://www.linkpicture.com/q/a2633c5f-gp1su30p-510x340.jpg-1.png" class="card-img-top" data-bs-toggle="modal" data-bs-target="#staticBackdrop" alt="artikel">
                     <div class="card-body">
                         <h5 class="card-title" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
