--- a/article.html
+++ b/article.html
@@ -78,7 +78,7 @@
     <div class="artikel" id="artikel" >
         <h3 class="text-start mb-3">Artikel</h3>
         <div style="border: 0.5px solid #BFBFBF"></div>
-        <div id="artikelContent" class="row pt-4" >
+        <div class="row pt-4" id="artikelContent">
         </div>
     </div>
 </div>
@@ -87,104 +87,7 @@
     <div class="infografis" id="infografis">
         <h3 class="text-start mb-3">Infografis</h3>
         <div style="border: 0.5px solid #BFBFBF"></div>
-        <div class="row pt-4">
-            <div class="col-sm-4 mb-3">
-                <div class="card">
-                    <img src="https://www.linkpicture.com/q/a2633c5f-gp1su30p-510x340.jpg-1.png" class="card-img-top" data-bs-toggle="modal" data-bs-target="#staticBackdrop" alt="artikel">
-                    <div class="card-body">
-                        <h5 class="card-title" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                            Transportasi Berkeadilan, Juru(s) Selamat Mobilitas Masyarakat Kita
-                        </h5>
-                        <!-- Modal -->
-                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Transportasi Berkeadilan, Juru(s) Selamat Mobilitas Masyarakat Kita</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <img src="https://www.linkpicture.com/q/a2633c5f-gp1su30p-510x340.jpg-1.png" class="card-img-top" alt="infografis">
-                                </div>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card card-infografis">
-                    <img src="https://www.linkpicture.com/q/a2633c5f-gp1su30p-510x340.jpg-1.png" class="card-img-top" data-bs-toggle="modal" data-bs-target="#staticBackdrop" alt="artikel">
-                    <div class="card-body">
-                        <h5 class="card-title" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                            Transportasi Berkeadilan, Juru(s) Selamat Mobilitas Masyarakat Kita
-                        </h5>
-                        <!-- Modal -->
-                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Transportasi Berkeadilan, Juru(s) Selamat Mobilitas Masyarakat Kita</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <img src="https://www.linkpicture.com/q/a2633c5f-gp1su30p-510x340.jpg-1.png" class="card-img-top" alt="infografis">
-                                </div>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card card-infografis">
-                    <img src="https://www.linkpicture.com/q/a2633c5f-gp1su30p-510x340.jpg-1.png" class="card-img-top" data-bs-toggle="modal" data-bs-target="#staticBackdrop" alt="artikel">
-                    <div class="card-body">
-                        <h5 class="card-title" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                            Transportasi Berkeadilan, Juru(s) Selamat Mobilitas Masyarakat Kita
-                        </h5>
-                        <!-- Modal -->
-                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Transportasi Berkeadilan, Juru(s) Selamat Mobilitas Masyarakat Kita</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <img src="https://www.linkpicture.com/q/a2633c5f-gp1su30p-510x340.jpg-1.png" class="card-img-top" alt="infografis">
-                                </div>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="col-sm-4">
-                <div class="card">
-                    <img src="https://www.linkpicture.com/q/a2633c5f-gp1su30p-510x340.jpg-1.png" class="card-img-top" data-bs-toggle="modal" data-bs-target="#staticBackdrop" alt="artikel">
-                    <div class="card-body">
-                        <h5 class="card-title" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                            Transportasi Berkeadilan, Juru(s) Selamat Mobilitas Masyarakat Kita
-                        </h5>
-                        <!-- Modal -->
-                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Transportasi Berkeadilan, Juru(s) Selamat Mobilitas Masyarakat Kita</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <img src="https://www.linkpicture.com/q/a2633c5f-gp1su30p-510x340.jpg-1.png" class="card-img-top" alt="infografis">
-                                </div>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="row pt-4" id="infografisContent">
         </div>
     </div>
 </div>
@@ -253,6 +156,7 @@
 
     <!-- Link JS -->
     <script src="assets/js/article.js"></script>
+    <script src="assets/js/infografis.js"></script>
 
     <!-- Script Boostrap-->
     <script
