--- a/article.html
+++ b/article.html
@@ -81,6 +81,9 @@
         <div class="row pt-4" id="artikelContent">
         </div>
     </div>
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-outline-success">Artikel Lainnya</button>
+    </div>
 </div>
 
 <div class="container p-5">
@@ -89,6 +92,9 @@
         <div style="border: 0.5px solid #BFBFBF"></div>
         <div class="row pt-4" id="infografisContent">
         </div>
+    </div>
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-outline-success">Infografis Lainnya</button>
     </div>
 </div>
 
