slicing ui detail aksi
menambahakan detailAksi.html untuk tampilan detail petisi dan form input petisi

--- a/aksi.html
+++ b/aksi.html
@@ -75,14 +75,14 @@
     </nav>
 
     <div class="container">
-      <div id="daftar-aksi">
+      <div id="aksi">
         <h3>Tanpa Aksi, Tidak Ada Perubahan</h3>
         <p class="mb-4">Ayo Bergabung dan Beraksi untuk Masa Depan Bumi yang Lebih Baik!</p>
         <hr>
       </div>
     </div>
     <div class="container">
-      <div class="row">
+      <div class="row" >
         <div class="col-md-4 col-sm-6 mb-4 ">
             <div class="card" >
                 <img src="https://i.ibb.co/hVRwTrJ/perbudakan-modern-di-laut-terus-berlanjut-polri-gagal-lindungi-abk-ikan-indonesia.jpg" class="card-img-top" alt="...">
