--- a/article.html
+++ b/article.html
@@ -82,7 +82,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-center">
-        <button class="btn btn-outline-success">Artikel Lainnya</button>
+        <button class="btn btn-outline-success" id="artikel-lainnya">Artikel Lainnya</button>
     </div>
 </div>
 
