--- a/article.html
+++ b/article.html
@@ -94,7 +94,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-center">
-        <button class="btn btn-outline-success">Infografis Lainnya</button>
+        <button class="btn btn-outline-success" id="infografis-lainnya">Infografis Lainnya</button>
     </div>
 </div>
 
