--- a/article.html
+++ b/article.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Environthink</title>
     <!-- Link CSS -->
-    <link rel="stylesheet" href="./assets/styles/article.css" />
-
-    
+    <link 
+        rel="stylesheet" 
+        href="./assets/styles/article.css" 
+    />
 
     <!-- Link CSS Bootstrap -->
     <link
@@ -78,7 +79,7 @@
     <div class="artikel" id="artikel" >
         <h3 class="text-start mb-3">Artikel</h3>
         <div style="border: 0.5px solid #BFBFBF"></div>
-        <div class="row pt-4" id="artikelContent">
+        <div class="row pt-4" id="articlesContent">
         </div>
     </div>
     <div class="d-flex justify-content-center">
@@ -160,15 +161,16 @@
     </div>
 </footer>
 
-    <!-- Link JS -->
-    <script src="assets/js/article.js"></script>
-    <script src="assets/js/infografis.js"></script>
-
     <!-- Script Boostrap-->
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous">
     </script>
+
+    <!-- Link JS -->
+    <script src="assets/js/article.js"></script>
+    <script src="assets/js/infografis.js"></script>
+
 </body>
 </html>
