modified detail artikel from api

--- a/detailArticle.html
+++ b/detailArticle.html
@@ -74,48 +74,36 @@
 
     <!-- Konten -->
     <div id="articlesContent" class="container">
-      <!-- <div class="row ms-1 me-1 mt-5">
+      <div class="row ms-1 me-1 mt-5">
         <div class="col-md 12 mb-3">
           <p class="hashTag m-0 p-0">
-            <span id="category">Cerita</span> <span id="dot"></span>
-            <span id="hashTagArticle">#Iklim</span>
+            <span id="cathegory"></span> <span id="dot"></span>
+            <span id="hashTag"></span>
           </p>
-          <h1 class="Judul">Lebaran di Desa yang Tenggelam</h1>
+          <h1 class="titleArticle" id="titleArticle"></h1>
           <p class="text-dark">
-            By <span id="Author " class="fw-bold">Greenpeace Indonesia</span>
+            By <span id="author" class="fw-bold"></span>
             <i class="bi bi-clock ms-1 me-1"></i>
-            <span id="dateArticle">26 April 2023</span>
+            <span id="date"></span>
           </p>
         </div>
         <div class="col-md-12 p-0 me-4 text-center">
           <img
             class="articlesImage img-fluid"
-            src="https://www.greenpeace.org/static/planet4-indonesia-stateless/2023/04/57322f08-lebaran_timbulsloko_2023_aji-styawan-greenpeace-9-1024x683.jpg"
+            src=""
             alt=""
+            id="images"
           />
         </div>
-        <div id="detailPreviewArticles" class="col-md-12 ps-0 pe-0">
-          <p class="detailArticle1 text-dark">
-            Matahari masih condong di ufuk timur pada Sabtu, 22 April lalu, saat
-            warga mulai meriung di dalam dan sekitar Masjid Darul Ibad, Desa
-            Timbulsloko, Kecamatan Sayung, Demak, Jawa Tengah.
-          </p>
-          <p class="detailArticle2 text-dark">
-            Di atas geladak kayu yang dibangun karena banjir rob menggenangi
-            desa itu, warga menggelar sajadah. Mereka melaksanakan salat
-            Idulfitri 1444 Hijriah.
-          </p>
-          <p class="detailArticle3 text-dark">
-            Beberapa tahun lalu, masjid ini sempat terendam air laut sehingga
-            warga kesulitan untuk salat berjamaah. Pada awal 2020, warga
-            merenovasinya dengan membangun panggung kayu. Setelah renovasi,
-            aktivitas keagamaan Islam pun rutin digelar kembali di masjid
-          </p>
-          <p class="detailArticle4"></p>
-          <p class="detailArticle5"></p>
-          <p class="detailArticle6"></p>
+        <div class="col-md-12 ps-0 pe-0 pt-5">
+          <p id="paragraf1" class="text-dark"></p>
+          <p id="paragraf2" class="text-dark"></p>
+          <p id="paragraf3" class="text-dark"></p>
+          <p id="paragraf4" class="text-dark"></p>
+          <p id="paragraf5" class="text-dark"></p>
+          <p id="paragraf6" class="text-dark"></p>
         </div>
-      </div> -->
+      </div>
     </div>
 
     <!-- Footer -->
@@ -188,6 +176,6 @@
     ></script>
 
     <!-- Script JS -->
-    <script src="assets/js/scriptDetailArticlePage.js"></script>
+    <script src="assets/js/detailArticle.js"></script>
   </body>
 </html>
