add paragraf artikel

--- a/detailArticle.html
+++ b/detailArticle.html
@@ -102,6 +102,10 @@
           <p id="paragraf4" class="text-dark"></p>
           <p id="paragraf5" class="text-dark"></p>
           <p id="paragraf6" class="text-dark"></p>
+          <p id="paragraf7" class="text-dark"></p>
+          <p id="paragraf8" class="text-dark"></p>
+          <p id="paragraf9" class="text-dark"></p>
+          <p id="paragraf10" class="text-dark"></p>
         </div>
       </div>
     </div>
