--- a/detailArticle.html
+++ b/detailArticle.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Environthink</title>
-    <!-- Link CSS -->
-    <link rel="stylesheet" href="assets/styles/detailArticle.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Environthink</title>
+  <!-- Link CSS -->
+  <link rel="stylesheet" href="assets/styles/detailArticle.css" />
 
-    <!-- Link CSS Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <!-- Link Icon Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
-  </head>
-  <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-to shadow">
-      <div class="container d-flex justify-content-between">
-        <a class="navbar-brand" href="#"
+  <!-- Link CSS Bootstrap -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+    crossorigin="anonymous"
+  />
+  <!-- Link Icon Bootstrap -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+  />
+</head>
+<body>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top" >
+  <div class="container">
+      <a class="navbar-brand" href="#"
           ><img
-            src="./assets/images/logo.png"
-            id="logo"
-            alt="Environthink Logo"
-        /></a>
-        <button
+          src="./assets/images/logo.png"
+          id="logo"
+          alt="Environthink Logo"
+      /></a>
+      <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
@@ -39,147 +39,147 @@
           aria-controls="navbarNavDropdown"
           aria-expanded="false"
           aria-label="Toggle navigation"
-        >
+      >
           <span class="navbar-toggler-icon"></span>
-        </button>
+      </button>
 
-        <div
+      <div
           class="justify-content-end collapse navbar-collapse"
           id="navbarNavDropdown"
-        >
+      >
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
+          <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
               <a class="nav-link active" href="#">Aksi</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Artikel</a>
-            </li>
-            <li class="nav-item mt-1 mb-2 ms-3 me-4">
+          </li>
+          <li class="nav-item">
+              <a class="nav-link active" href="article.html">Artikel</a>
+          </li>
+          <li class="nav-item mt-1 mb-2 ms-3 me-4">
               <a class="" href="#"
-                ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
+              ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
               ></a>
-            </li>
-            <li class="nav-item">
+          </li>
+          <li class="nav-item">
               <a class="btnDonasi btn nav-link active ps-3 pe-3" href="#"
-                >Donasi</a
+              >Donasi</a
               >
-            </li>
+          </li>
           </ul>
+      </div>
+  </div>
+</nav>
+
+  <!-- Konten -->
+  <div id="articlesContent" class="container pt-5">
+    <div class="row ms-1 me-1 mt-5">
+      <div class="col-md 12 mb-3">
+        <p class="hashTag m-0 p-0">
+          <span id="cathegory"></span> <span id="dot"></span>
+          <span id="hashTag"></span>
+        </p>
+        <h1 class="titleArticle" id="titleArticle"></h1>
+        <p class="text-dark">
+          By <span id="author" class="fw-bold"></span>
+          <i class="bi bi-clock ms-1 me-1"></i>
+          <span id="date"></span>
+        </p>
+      </div>
+      <div class="col-md-12 p-0 me-4 text-center">
+        <img
+          class="articlesImage img-fluid"
+          src=""
+          alt=""
+          id="images"
+        />
+      </div>
+      <div class="col-md-12 ps-0 pe-0 pt-5">
+        <p id="paragraf1" class="text-dark"></p>
+        <p id="paragraf2" class="text-dark"></p>
+        <p id="paragraf3" class="text-dark"></p>
+        <p id="paragraf4" class="text-dark"></p>
+        <p id="paragraf5" class="text-dark"></p>
+        <p id="paragraf6" class="text-dark"></p>
+        <p id="paragraf7" class="text-dark"></p>
+        <p id="paragraf8" class="text-dark"></p>
+        <p id="paragraf9" class="text-dark"></p>
+        <p id="paragraf10" class="text-dark"></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer id="footer">
+    <div class="container">
+      <div class="row pt-3">
+        <div class="col-sm-12 col-md-5">
+          <p class="judulDeskripsiEnvironthink">Environthink</p>
+          <p class="">
+            EnvironThink berfokus pada isu-isu lingkungan dan solusi untuk
+            menjaga keberlanjutan alam. Website ini mengingatkan keterkaitan
+            antara lingkungan dan pemikiran, serta pentingnya mempertimbangkan
+            dampak lingkungan dalam keputusan dan tindakan kita sehari-hari.
+          </p>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <p>Informasi Kontak</p>
+          <p class="mb-1"><i class="bi bi-telephone"></i> 0351 2345 678</p>
+          <p class="mb-1">
+            <i class="bi bi-envelope"></i> environthink23@gmail.com
+          </p>
+          <p class="mb-1">
+            <i class="bi bi-geo-alt"></i> Jl. Kenangan No. 99 Planet Mars
+          </p>
+        </div>
+        <div id="medsos" class="col-sm-12 col-md-3">
+          <p>Media Sosial</p>
+          <a
+            class="bg-white fs-4 text-dark pt-1 pb-1 ps-2 pe-2 border rounded"
+            href="https://www.instagram.com/greenpeaceid/"
+            ><i class="bi bi-instagram"></i
+          ></a>
+          <a
+            class="bg-white fs-4 pt-1 pb-1 ps-2 pe-2 border rounded"
+            href="https://www.facebook.com/GreenpeaceIndonesia/"
+            ><i class="bi bi-facebook"></i
+          ></a>
+          <a
+            class="bg-white fs-4 pt-1 pb-1 ps-2 pe-2 border rounded"
+            href="https://twitter.com/greenpeaceid"
+            ><i class="bi bi-twitter"></i
+          ></a>
+          <a
+            class="bg-white fs-4 pt-1 pb-1 ps-2 pe-2 border rounded text-danger"
+            href="https://www.youtube.com/greenpeaceindonesia"
+            ><i class="bi bi-youtube"></i
+          ></a>
         </div>
       </div>
-    </nav>
-
-    <!-- Konten -->
-    <div id="articlesContent" class="container">
-      <div class="row ms-1 me-1 mt-5">
-        <div class="col-md 12 mb-3">
-          <p class="hashTag m-0 p-0">
-            <span id="cathegory"></span> <span id="dot"></span>
-            <span id="hashTag"></span>
-          </p>
-          <h1 class="titleArticle" id="titleArticle"></h1>
-          <p class="text-dark">
-            By <span id="author" class="fw-bold"></span>
-            <i class="bi bi-clock ms-1 me-1"></i>
-            <span id="date"></span>
-          </p>
+      <hr id="copyRightLine" class="mb-2" />
+      <div class="row">
+        <div class="col-sm-12 col-md-6 text-white">
+          Copyright &#169; 2023. Greenpeace. All Right Reserved.
         </div>
-        <div class="col-md-12 p-0 me-4 text-center">
-          <img
-            class="articlesImage img-fluid"
-            src=""
-            alt=""
-            id="images"
-          />
-        </div>
-        <div class="col-md-12 ps-0 pe-0 pt-5">
-          <p id="paragraf1" class="text-dark"></p>
-          <p id="paragraf2" class="text-dark"></p>
-          <p id="paragraf3" class="text-dark"></p>
-          <p id="paragraf4" class="text-dark"></p>
-          <p id="paragraf5" class="text-dark"></p>
-          <p id="paragraf6" class="text-dark"></p>
-          <p id="paragraf7" class="text-dark"></p>
-          <p id="paragraf8" class="text-dark"></p>
-          <p id="paragraf9" class="text-dark"></p>
-          <p id="paragraf10" class="text-dark"></p>
+        <div
+          id="country"
+          class="col-sm-12 col-md-6 text-md-end text-sm-start text-white"
+        >
+          Indonesia
         </div>
       </div>
     </div>
+  </footer>
 
-    <!-- Footer -->
-    <footer id="footer">
-      <div class="container">
-        <div class="row pt-3">
-          <div class="col-sm-12 col-md-5">
-            <p class="judulDeskripsiEnvironthink">Environthink</p>
-            <p class="">
-              EnvironThink berfokus pada isu-isu lingkungan dan solusi untuk
-              menjaga keberlanjutan alam. Website ini mengingatkan keterkaitan
-              antara lingkungan dan pemikiran, serta pentingnya mempertimbangkan
-              dampak lingkungan dalam keputusan dan tindakan kita sehari-hari.
-            </p>
-          </div>
-          <div class="col-sm-12 col-md-4">
-            <p>Informasi Kontak</p>
-            <p class="mb-1"><i class="bi bi-telephone"></i> 0351 2345 678</p>
-            <p class="mb-1">
-              <i class="bi bi-envelope"></i> environthink23@gmail.com
-            </p>
-            <p class="mb-1">
-              <i class="bi bi-geo-alt"></i> Jl. Kenangan No. 99 Planet Mars
-            </p>
-          </div>
-          <div id="medsos" class="col-sm-12 col-md-3">
-            <p>Media Sosial</p>
-            <a
-              class="bg-white fs-4 text-dark pt-1 pb-1 ps-2 pe-2 border rounded"
-              href="https://www.instagram.com/greenpeaceid/"
-              ><i class="bi bi-instagram"></i
-            ></a>
-            <a
-              class="bg-white fs-4 pt-1 pb-1 ps-2 pe-2 border rounded"
-              href="https://www.facebook.com/GreenpeaceIndonesia/"
-              ><i class="bi bi-facebook"></i
-            ></a>
-            <a
-              class="bg-white fs-4 pt-1 pb-1 ps-2 pe-2 border rounded"
-              href="https://twitter.com/greenpeaceid"
-              ><i class="bi bi-twitter"></i
-            ></a>
-            <a
-              class="bg-white fs-4 pt-1 pb-1 ps-2 pe-2 border rounded text-danger"
-              href="https://www.youtube.com/greenpeaceindonesia"
-              ><i class="bi bi-youtube"></i
-            ></a>
-          </div>
-        </div>
-        <hr id="copyRightLine" class="mb-2" />
-        <div class="row">
-          <div class="col-sm-12 col-md-6 text-white">
-            Copyright &#169; 2023. Greenpeace. All Right Reserved.
-          </div>
-          <div
-            id="country"
-            class="col-sm-12 col-md-6 text-md-end text-sm-start text-white"
-          >
-            Indonesia
-          </div>
-        </div>
-      </div>
-    </footer>
+  <!-- Script Boostrap-->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"
+  ></script>
 
-    <!-- Script Boostrap-->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Script JS -->
-    <script src="assets/js/detailArticle.js"></script>
-  </body>
+  <!-- Script JS -->
+  <script src="assets/js/detailArticle.js"></script>
+</body>
 </html>
