fixed data display in 'aksi' under certain conditions
memperbaiki beberapa tampilan saat kondisi tertentu seperti:
- saat petisi sudah memenuhi target
- saat petisi belum ada dukungan

--- a/detailAksi.html
+++ b/detailAksi.html
@@ -86,11 +86,11 @@
       <div class="col-md-4 pt-5">
         <div id="aksi">
           <h5 class="fw-bold" id="heading-form"></h5>
-          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="10" aria-valuemin="0"
+          <div class="progress" id="bar" role="progressbar" aria-label="Basic example" aria-valuenow="10" aria-valuemin="0"
             aria-valuemax="100">
             <div class="progress-bar bg-success" id="bar-petisi" style="width: 1%"></div>
           </div>
-          <figcaption class="figure-caption text-end">
+          <figcaption class="figure-caption text-end" id="figcaption">
             <span id="caption-bar"></span> / <span id="target"></span> dukungan
           </figcaption>
           <p class="fw-semibold" id="paragarfPetisi">
