--- a/donasi.html
+++ b/donasi.html
@@ -11,7 +11,7 @@
 		<p>Silakan cek fitur lain yang tersedia:</p>
 		<ul>
 			<li><a href="article.html">Baca Artikel</a></li>
-			<li><a href="aksi.html">Ikuti Aksi</a></li>
+			<li><a href="aksi.html"> Aksi</a></li>
 		
 		</ul>
 	</div>
